--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,26 +1,18 @@
+## ETAPA 1: COMPILACIÓN (BUILD)
 FROM alpine:latest AS build
+
 RUN apk add --no-cache \
-    build-base \
-    cmake \
-    git \
-    linux-headers \
-    openssl \
-    openssl-dev \
-    openssl-libs-static \
-    zlib-dev \
-    zlib-static \
-    asio-dev \
-    sqlite-dev \
-    sqlite-static \
-    nlohmann-json
-WORKDIR /app/certs
+    build-base cmake git linux-headers \
+    openssl-dev openssl-libs-static \
+    zlib-dev zlib-static \
+    boost-dev boost-static \
+    sqlite-dev sqlite-static \
+    nlohmann-json \
+    ca-certificates
 
-RUN echo "appuser:x:10001:10001:appuser:/:/sbin/nologin" > /etc/passwd_app
-
-RUN git clone --branch v1.2.0 --depth 1 https://github.com/CrowCpp/Crow.git /tmp/crow && \
-    mkdir -p /usr/local/include && \
-    cp -r /tmp/crow/include/* /usr/local/include/ && \
-    rm -rf /tmp/crow
+RUN echo "appuser:x:10001:10001:appuser:/:/sbin/nologin" > /etc/passwd_app && \
+    mkdir -p /app/run/nexus && \
+    chown -R 10001:10001 /app/run/nexus
 
 RUN git clone https://github.com/Thalhammer/jwt-cpp.git /tmp/jwt && \
     mkdir -p /usr/local/include && \
@@ -31,13 +23,12 @@ WORKDIR /app
 COPY ./backend/src ./src
 RUN cd src && make
 
-## ETAPA 2: IMAGEN DE PRODUCCIÓN FINAL (RUNTIME ULTRA-LIGERO)
+## ETAPA 2: IMAGEN FINAL (SCRATCH)
 FROM alpine AS runtime
 COPY --from=build /etc/passwd_app /etc/passwd
+COPY --from=build /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
+COPY --from=build --chown=10001:10001 /app/run/nexus /var/run/nexus
 COPY --from=build /app/build/app /bin/app
 
-
 USER appuser
-EXPOSE 8080
-WORKDIR /bin
 ENTRYPOINT ["/bin/app"]
