--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,47 +1,28 @@
 services:
-  app:
-    build:
-      context: ./nginx
-      dockerfile: Dockerfile
-    container_name: app
-    ports:
-      - "${PORT_HOST:-443}:443"
-      - "80:80"
-    volumes:
-      # Montamos el socket en RAM para Nginx
-      - socket_nexus:/var/run/nexus
-      - ./data:/database
-    restart: unless-stopped
-    ulimits:
-      nofile:
-        soft: 65535
-        hard: 65535
-    deploy:
-      resources:
-        limits:
-          memory: 64M 
-          cpus: '1.0'
-
   api:
     build:
-      context: ./api
+      context: .
       dockerfile: Dockerfile
     container_name: api
+    # Abrimos los puertos para que el ALB de AWS o tu host puedan entrar
+    ports:
+      - "80:80"  # Mapeamos el 80 externo al 8080 interno de tu binario
     restart: unless-stopped
-    volumes:
-      # Montamos el MISMO socket en RAM para Crow
-      - socket_nexus:/var/run/nexus
+    # Ya no necesitamos volúmenes compartidos para sockets de red
+    sysctls:
+      - net.core.somaxconn=65535         # Máximo nivel para absorber ráfagas
+      - net.ipv4.tcp_tw_reuse=1          # Reutilización rápida de sockets
+      - net.ipv4.ip_local_port_range=1024 65535
+      - net.ipv4.tcp_max_syn_backlog=16384
+    ulimits:
+      nofile:
+        soft: 100000
+        hard: 100000
     deploy:
       resources:
         limits:
-          memory: 32M 
-          cpus: '1'
+          memory: 512M 
+          cpus: '1.0'
 
-volumes:
-  # Definimos el volumen tipo tmpfs (RAM pura)
-  socket_nexus:
-    driver: local
-    driver_opts:
-      type: tmpfs
-      device: tmpfs
-      o: "size=8M,mode=1777" # 8MB es más que suficiente para un archivo .sock
+# El volumen tmpfs queda opcional si tu base de datos (SQLite/Postgres) 
+# lo necesita para archivos temporales de alta velocidad.
