--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,9 +15,12 @@ services:
       - net.ipv4.ip_local_port_range=1024 65535
       - net.ipv4.tcp_max_syn_backlog=16384
     ulimits:
+      memlock: -1
       nofile:
         soft: 100000
         hard: 100000
+    security_opt:
+      - seccomp:unconfined
     deploy:
       resources:
         limits:
